--- a/dashboard.html
+++ b/dashboard.html
@@ -13,9 +13,10 @@
         <h2>KLINIK</h2>
         <a href="dashboard.html">Dashboard</a>
         <a href="pasien.html">Data Pasien</a>
-        <a href="#">Data Dokter</a>
-        <a href="#">Pelayanan</a>
-        <a href="index.html" class="logout">Logout</a>
+        <a href="dokter.html" class="admin-only">Data Dokter</a>
+        <a href="pelayanan.html">Pelayanan</a>
+        <a href="#" onclick="logout()" class="logout">Logout</a>
+        <script src="js/auth.js"></script>
     </aside>
 
     <!-- KONTEN -->
