--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Login Klinik</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="login-page">
 
 <div class="login-box">
     <h2>Login Sistem Klinik</h2>
