--- a/dashboard.html
+++ b/dashboard.html
@@ -20,17 +20,48 @@
     </aside>
 
     <!-- KONTEN -->
-    <main class="content">
-        <h1>Dashboard</h1>
-        <p>Selamat datang di Sistem Manajemen Pelayanan Pasien Klinik.</p>
+<main class="content">
+    <h1>Dashboard Sistem Klinik</h1>
+    <p>
+        Selamat datang di <b>Sistem Informasi Pelayanan Pasien Klinik Berbasis Web</b>.
+        Sistem ini digunakan untuk membantu proses pengelolaan data pasien, dokter,
+        serta pelayanan dan rekam medis secara terkomputerisasi.
+    </p>
 
-        <div class="cards">
-            <div class="card">👨‍⚕️ Dokter</div>
-            <div class="card">🧑 Pasien</div>
-            <div class="card">📋 Pelayanan</div>
-            <div class="card">📊 Laporan</div>
+    <!-- INFO BOX -->
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;margin:25px 0;">
+        <div style="background:#0d6efd;color:white;padding:20px;border-radius:10px;">
+            <h3>Manajemen Pasien</h3>
+            <p>Mengelola data pasien yang berobat ke klinik secara terstruktur dan aman.</p>
         </div>
-    </main>
+
+        <div style="background:#198754;color:white;padding:20px;border-radius:10px;">
+            <h3>Data Dokter</h3>
+            <p>Mengelola informasi dokter, spesialisasi, dan jadwal praktik.</p>
+        </div>
+
+        <div style="background:#ffc107;color:black;padding:20px;border-radius:10px;">
+            <h3>Pelayanan</h3>
+            <p>Mencatat pelayanan dan rekam medis pasien yang dilakukan oleh dokter.</p>
+        </div>
+    </div>
+
+    <!-- INFORMASI SISTEM -->
+    <div style="background:white;padding:20px;border-radius:10px;box-shadow:0 3px 8px rgba(0,0,0,0.05);">
+        <h3>Informasi Sistem</h3>
+        <ul>
+            <li>Sistem berbasis web dan dapat diakses melalui browser</li>
+            <li>Menggunakan LocalStorage sebagai media penyimpanan data</li>
+            <li>Dilengkapi dengan autentikasi login dan hak akses pengguna</li>
+            <li>Mendukung pengelolaan data pasien, dokter, dan rekam medis</li>
+        </ul>
+    </div>
+
+    <p style="margin-top:30px;font-style:italic;color:#6c757d;">
+        Silakan gunakan menu di sebelah kiri untuk mengakses fitur sistem.
+    </p>
+</main>
+
 </div>
 
 </body>
