--- a/dashboard.html
+++ b/dashboard.html
@@ -16,53 +16,110 @@
         <a href="dokter.html" class="admin-only">Data Dokter</a>
         <a href="pelayanan.html">Pelayanan</a>
         <a href="#" onclick="logout()" class="logout">Logout</a>
-        <script src="js/auth.js"></script>
     </aside>
 
-    <!-- KONTEN -->
-<main class="content">
-    <h1>Dashboard Sistem Klinik</h1>
-    <p>
-        Selamat datang di <b>Sistem Informasi Pelayanan Pasien Klinik Berbasis Web</b>.
-        Sistem ini digunakan untuk membantu proses pengelolaan data pasien, dokter,
-        serta pelayanan dan rekam medis secara terkomputerisasi.
-    </p>
+    <!-- CONTENT -->
+    <main class="content">
+        <h1>Dashboard Sistem Klinik</h1>
 
-    <!-- INFO BOX -->
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;margin:25px 0;">
-        <div style="background:#0d6efd;color:white;padding:20px;border-radius:10px;">
-            <h3>Manajemen Pasien</h3>
-            <p>Mengelola data pasien yang berobat ke klinik secara terstruktur dan aman.</p>
+        <p>
+            Selamat datang di <b>Sistem Informasi Pelayanan Pasien Klinik Berbasis Web</b>.
+            Halaman dashboard menampilkan ringkasan informasi dan kondisi sistem secara umum.
+        </p>
+
+        <!-- WAKTU REAL-TIME -->
+        <div id="clock-box" style="
+            background:#212529;
+            color:white;
+            padding:15px 20px;
+            border-radius:10px;
+            margin:15px 0;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;">
+            <span id="date"></span>
+            <span id="time"></span>
         </div>
 
-        <div style="background:#198754;color:white;padding:20px;border-radius:10px;">
-            <h3>Data Dokter</h3>
-            <p>Mengelola informasi dokter, spesialisasi, dan jadwal praktik.</p>
+        <!-- STATISTIK -->
+        <div style="
+            display:grid;
+            grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+            gap:20px;
+            margin:25px 0;">
+
+            <div style="background:#0d6efd;color:white;padding:20px;border-radius:10px;">
+                <h3 id="totalPasien">0</h3>
+                <p>Total Pasien</p>
+            </div>
+
+            <div style="background:#198754;color:white;padding:20px;border-radius:10px;">
+                <h3 id="totalDokter">0</h3>
+                <p>Total Dokter</p>
+            </div>
+
+            <div style="background:#ffc107;color:black;padding:20px;border-radius:10px;">
+                <h3 id="totalPelayanan">0</h3>
+                <p>Total Pelayanan</p>
+            </div>
         </div>
 
-        <div style="background:#ffc107;color:black;padding:20px;border-radius:10px;">
-            <h3>Pelayanan</h3>
-            <p>Mencatat pelayanan dan rekam medis pasien yang dilakukan oleh dokter.</p>
+        <!-- INFORMASI SISTEM -->
+        <div style="
+            background:white;
+            padding:20px;
+            border-radius:10px;
+            box-shadow:0 3px 8px rgba(0,0,0,0.05);">
+            <h3>Informasi Sistem</h3>
+            <ul>
+                <li>Sistem berbasis web dan dapat diakses melalui browser</li>
+                <li>Menggunakan LocalStorage sebagai media penyimpanan data</li>
+                <li>Dilengkapi autentikasi login dan hak akses pengguna</li>
+                <li>Mendukung manajemen pasien, dokter, dan rekam medis</li>
+            </ul>
         </div>
-    </div>
 
-    <!-- INFORMASI SISTEM -->
-    <div style="background:white;padding:20px;border-radius:10px;box-shadow:0 3px 8px rgba(0,0,0,0.05);">
-        <h3>Informasi Sistem</h3>
-        <ul>
-            <li>Sistem berbasis web dan dapat diakses melalui browser</li>
-            <li>Menggunakan LocalStorage sebagai media penyimpanan data</li>
-            <li>Dilengkapi dengan autentikasi login dan hak akses pengguna</li>
-            <li>Mendukung pengelolaan data pasien, dokter, dan rekam medis</li>
-        </ul>
-    </div>
-
-    <p style="margin-top:30px;font-style:italic;color:#6c757d;">
-        Silakan gunakan menu di sebelah kiri untuk mengakses fitur sistem.
-    </p>
-</main>
-
+        <p style="margin-top:30px;font-style:italic;color:#6c757d;">
+            Gunakan menu navigasi di sebelah kiri untuk mengakses fitur sistem.
+        </p>
+    </main>
 </div>
+
+<!-- AUTH -->
+<script src="js/auth.js"></script>
+
+<!-- DASHBOARD SCRIPT -->
+<script>
+/* ===== JAM & TANGGAL REAL-TIME ===== */
+function updateClock() {
+    const now = new Date();
+
+    const optionsDate = {
+        weekday: 'long',
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
+    };
+
+    document.getElementById("date").innerText =
+        now.toLocaleDateString("id-ID", optionsDate);
+
+    document.getElementById("time").innerText =
+        now.toLocaleTimeString("id-ID");
+}
+
+setInterval(updateClock, 1000);
+updateClock();
+
+/* ===== STATISTIK ===== */
+const pasien = JSON.parse(localStorage.getItem("pasien")) || [];
+const dokter = JSON.parse(localStorage.getItem("dokter")) || [];
+const pelayanan = JSON.parse(localStorage.getItem("pelayanan")) || [];
+
+document.getElementById("totalPasien").innerText = pasien.length;
+document.getElementById("totalDokter").innerText = dokter.length;
+document.getElementById("totalPelayanan").innerText = pelayanan.length;
+</script>
 
 </body>
 </html>
